[gd_scene load_steps=48 format=3 uid="uid://c7mg7mk2p0hnu"]

[ext_resource type="Script" path="res://Scripts/chappell.gd" id="1_qqisf"]
[ext_resource type="PackedScene" uid="uid://d2oyhs7iecljy" path="res://Characters/Chappell/TrueChappelCharacter.glb" id="2_hb0lc"]
[ext_resource type="AudioStream" uid="uid://cob2ilgwohupa" path="res://Characters/Default/cartoon-slap-1.mp3" id="3_k710g"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ij7k"]
albedo_color = Color(0.94902, 0.635294, 0.482353, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fqono"]
animation = &"GuardLower"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a8qif"]
animation = &"GuardUpper"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ic7dk"]
animation = &"Hurt"
use_custom_timeline = true
timeline_length = 0.624
stretch_time_scale = true
start_offset = 0.0
loop_mode = 0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jjpav"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ypfj3"]
animation = &"LeftHigh"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cea4i"]
animation = &"LeftLow"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3t0tf"]
animation = &"RightHigh"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qjyt5"]
animation = &"RightLow"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_16mcv"]
animation = &"Skinwalker"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f7yow"]
animation = &"WalkForward"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hulv5"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f4bgq"]
advance_mode = 2
advance_condition = &"guardLow"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6d6kk"]
advance_mode = 2
advance_condition = &"guardHigh"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vreb7"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mdi44"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6kjyx"]
advance_mode = 2
advance_condition = &"isWalking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_diphs"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_06aor"]
advance_mode = 2
advance_condition = &"leftHigh"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8wng2"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ix5cv"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n7ltf"]
advance_mode = 2
advance_condition = &"leftLow"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4pdah"]
advance_mode = 2
advance_condition = &"rightHigh"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_23618"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i7pxj"]
advance_mode = 2
advance_condition = &"rightLow"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w0nhj"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r6nj1"]
advance_mode = 2
advance_condition = &"skinwalker"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qj80s"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y5lyu"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r66u3"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wrcqs"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cpvag"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qib3f"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u4b1d"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wpfvo"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kvjj7"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rko70"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bb84x"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_cx2tk"]
states/GuardLower/node = SubResource("AnimationNodeAnimation_fqono")
states/GuardLower/position = Vector2(375.5, 265)
states/GuardUpper/node = SubResource("AnimationNodeAnimation_a8qif")
states/GuardUpper/position = Vector2(550, 263.5)
states/Hurt/node = SubResource("AnimationNodeAnimation_ic7dk")
states/Hurt/position = Vector2(679.5, -47.5)
states/Idle/node = SubResource("AnimationNodeAnimation_jjpav")
states/Idle/position = Vector2(377, 77)
states/LeftHigh/node = SubResource("AnimationNodeAnimation_ypfj3")
states/LeftHigh/position = Vector2(146.5, -14.5)
states/LeftLow/node = SubResource("AnimationNodeAnimation_cea4i")
states/LeftLow/position = Vector2(211, -107.5)
states/RightHigh/node = SubResource("AnimationNodeAnimation_3t0tf")
states/RightHigh/position = Vector2(384, -113)
states/RightLow/node = SubResource("AnimationNodeAnimation_qjyt5")
states/RightLow/position = Vector2(525.5, -106.625)
states/Skinwalker/node = SubResource("AnimationNodeAnimation_16mcv")
states/Skinwalker/position = Vector2(593, 163.5)
states/Start/position = Vector2(200.5, 99)
states/WalkForward/node = SubResource("AnimationNodeAnimation_f7yow")
states/WalkForward/position = Vector2(610.5, 75.5)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_hulv5"), "Idle", "GuardLower", SubResource("AnimationNodeStateMachineTransition_f4bgq"), "Idle", "GuardUpper", SubResource("AnimationNodeStateMachineTransition_6d6kk"), "GuardLower", "Idle", SubResource("AnimationNodeStateMachineTransition_vreb7"), "GuardUpper", "Idle", SubResource("AnimationNodeStateMachineTransition_mdi44"), "Idle", "WalkForward", SubResource("AnimationNodeStateMachineTransition_6kjyx"), "WalkForward", "Idle", SubResource("AnimationNodeStateMachineTransition_diphs"), "Idle", "LeftHigh", SubResource("AnimationNodeStateMachineTransition_06aor"), "LeftHigh", "Idle", SubResource("AnimationNodeStateMachineTransition_8wng2"), "LeftLow", "Idle", SubResource("AnimationNodeStateMachineTransition_ix5cv"), "Idle", "LeftLow", SubResource("AnimationNodeStateMachineTransition_n7ltf"), "Idle", "RightHigh", SubResource("AnimationNodeStateMachineTransition_4pdah"), "RightHigh", "Idle", SubResource("AnimationNodeStateMachineTransition_23618"), "Idle", "RightLow", SubResource("AnimationNodeStateMachineTransition_i7pxj"), "RightLow", "Idle", SubResource("AnimationNodeStateMachineTransition_w0nhj"), "Idle", "Skinwalker", SubResource("AnimationNodeStateMachineTransition_r6nj1"), "Skinwalker", "Idle", SubResource("AnimationNodeStateMachineTransition_qj80s"), "Idle", "Hurt", SubResource("AnimationNodeStateMachineTransition_y5lyu"), "Hurt", "Idle", SubResource("AnimationNodeStateMachineTransition_r66u3"), "RightLow", "Hurt", SubResource("AnimationNodeStateMachineTransition_wrcqs"), "RightHigh", "Hurt", SubResource("AnimationNodeStateMachineTransition_cpvag"), "LeftLow", "Hurt", SubResource("AnimationNodeStateMachineTransition_qib3f"), "LeftHigh", "Hurt", SubResource("AnimationNodeStateMachineTransition_u4b1d"), "WalkForward", "Hurt", SubResource("AnimationNodeStateMachineTransition_wpfvo"), "Skinwalker", "Hurt", SubResource("AnimationNodeStateMachineTransition_kvjj7"), "GuardUpper", "Hurt", SubResource("AnimationNodeStateMachineTransition_rko70"), "GuardLower", "Hurt", SubResource("AnimationNodeStateMachineTransition_bb84x")]
graph_offset = Vector2(54, -196)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1t3d4"]
radius = 0.0858856
height = 0.449269

[sub_resource type="BoxMesh" id="BoxMesh_0j46t"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j3yqx"]
size = Vector3(0.561096, 1.50871, 0.437073)

[sub_resource type="BoxShape3D" id="BoxShape3D_acvlh"]
size = Vector3(0.495117, 0.393738, 0.367981)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rw2st"]
radius = 0.303225
height = 1.39658

[node name="Chappell" type="CharacterBody3D"]
script = ExtResource("1_qqisf")

[node name="TrueChappelCharacter" parent="." instance=ExtResource("2_hb0lc")]

[node name="Skeleton3D" parent="TrueChappelCharacter/MBlab_sk1732665696_6954129" index="0"]
bones/1/position = Vector3(0.20473, 0.270797, -0.0854607)
bones/1/rotation = Quaternion(0.995137, 0.017935, 0.00621377, 0.0966579)
bones/2/position = Vector3(-0.00663541, 0.0682295, -0.0894001)
bones/2/rotation = Quaternion(0.686857, -0.0124134, 0.0348994, 0.725848)
bones/3/position = Vector3(0.00343232, 0.0086756, 0.163641)
bones/3/rotation = Quaternion(-0.725497, 0.0247545, -0.0108902, 0.687693)
bones/4/rotation = Quaternion(0.00549968, -0.310867, 0.95003, -0.0278381)
bones/5/rotation = Quaternion(0.0410795, 0.653559, 0.755323, -0.0257083)
bones/6/rotation = Quaternion(0.462231, 0.00559598, 0.00649141, 0.886718)
bones/7/position = Vector3(0.279105, 0.744503, -0.583299)
bones/8/position = Vector3(-0.20473, -0.129624, -0.0137616)
bones/8/rotation = Quaternion(0.995138, -0.0179096, -0.00595761, 0.0966626)
bones/9/position = Vector3(0.00668189, 0.0682294, -0.0893966)
bones/9/rotation = Quaternion(0.686866, 0.0122249, -0.034721, 0.725852)
bones/10/position = Vector3(-0.00343231, 0.00867559, 0.163641)
bones/13/rotation = Quaternion(0.462233, -0.00582631, -0.00637126, 0.886717)
bones/14/rotation = Quaternion(-0.00129338, 0.996536, -0.0831576, -0.000123029)
bones/16/position = Vector3(-1.83217e-06, -0.0615102, -0.760665)
bones/16/rotation = Quaternion(-0.817013, 6.97201e-07, 9.66296e-07, 0.57662)
bones/17/rotation = Quaternion(-0.0141183, -0.0765093, 0.995451, 0.0549974)
bones/18/rotation = Quaternion(-0.296979, 0.00588759, 0.0105843, 0.954807)
bones/20/rotation = Quaternion(0.734487, 0.0186378, 0.0429962, 0.677003)
bones/21/rotation = Quaternion(0.216765, -0.00657604, -0.0362533, 0.975528)
bones/23/rotation = Quaternion(-0.0179031, 0.190799, 0.979907, -0.055295)
bones/24/rotation = Quaternion(-0.347738, -0.00357667, -0.032552, 0.93702)
bones/26/rotation = Quaternion(0.574201, -0.04383, -0.00826255, 0.817498)
bones/27/rotation = Quaternion(0.216765, 0.00657602, 0.0362534, 0.975528)
bones/29/rotation = Quaternion(0.0940908, -3.6742e-08, 3.84521e-09, 0.995564)
bones/29/scale = Vector3(1, 0.99998, 0.99998)
bones/30/rotation = Quaternion(-0.0986179, 1.57652e-14, 0, 0.995125)
bones/31/rotation = Quaternion(0.0926275, -3.1658e-08, -2.72429e-09, 0.995701)
bones/32/rotation = Quaternion(-0.141447, -0.167338, -0.759129, 0.612955)
bones/33/rotation = Quaternion(-0.0848687, 0.169647, -0.582018, 0.790741)
bones/34/rotation = Quaternion(0.257982, -0.060489, -0.177878, 0.947706)
bones/35/rotation = Quaternion(0.000398579, 0.688884, -0.0600946, 0.722377)
bones/36/rotation = Quaternion(-0.531637, 0.651305, -0.00470144, -0.541425)
bones/37/rotation = Quaternion(-0.414817, -0.0630402, 0.163786, 0.89282)
bones/37/scale = Vector3(1, 0.999996, 1)
bones/38/rotation = Quaternion(-0.857025, 0.0216347, -0.000121036, 0.514821)
bones/39/rotation = Quaternion(-0.012025, 0.989424, -0.115759, -0.0865733)
bones/40/rotation = Quaternion(-0.731953, -0.10727, -0.022194, 0.672492)
bones/40/scale = Vector3(1, 0.99999, 1.00001)
bones/41/rotation = Quaternion(-0.639713, -0.0123844, 0.0240525, 0.768138)
bones/42/rotation = Quaternion(-0.78424, -0.0332672, 0.013078, 0.619427)
bones/43/rotation = Quaternion(0.0581726, 0.99295, -0.0803642, -0.0648607)
bones/44/rotation = Quaternion(-0.713155, -0.0597329, -0.0683968, 0.6951)
bones/44/scale = Vector3(1, 0.99999, 1.00001)
bones/45/rotation = Quaternion(-0.638727, 0.0156509, 0.0240733, 0.768898)
bones/46/rotation = Quaternion(-0.766331, -0.0132165, 0.00781914, 0.642262)
bones/47/rotation = Quaternion(0.0678507, 0.996047, -0.0467186, -0.0332244)
bones/48/rotation = Quaternion(-0.666263, -0.0128435, -0.0294783, 0.745023)
bones/48/scale = Vector3(1, 0.99999, 1.00001)
bones/49/rotation = Quaternion(-0.658749, 0.00929136, -0.0184151, 0.75208)
bones/50/rotation = Quaternion(-0.771079, -0.00911058, -0.00577239, 0.636649)
bones/51/rotation = Quaternion(0.0546879, 0.998132, 0.00396651, -0.0269519)
bones/52/rotation = Quaternion(-0.618367, -0.0127648, -0.0232364, 0.785442)
bones/52/scale = Vector3(1, 0.99999, 1.00001)
bones/53/rotation = Quaternion(-0.660873, 0.0081653, -0.00798343, 0.750411)
bones/54/rotation = Quaternion(-0.794378, 0.00568122, -0.0191265, 0.607096)
bones/55/rotation = Quaternion(0.0463685, 0.600529, 0.796389, 0.0545815)
bones/56/rotation = Quaternion(0.0463685, 0.600529, 0.796389, 0.0545815)
bones/57/rotation = Quaternion(0.0463685, 0.600529, 0.796389, 0.0545815)
bones/58/rotation = Quaternion(0.0463685, 0.600529, 0.796389, 0.0545815)
bones/59/rotation = Quaternion(0.0675248, 0.958142, -0.27719, -0.0238658)
bones/60/rotation = Quaternion(0.0610598, 0.818667, 0.569785, 0.0374283)
bones/64/rotation = Quaternion(-0.141443, 0.167335, 0.75913, 0.612956)
bones/65/rotation = Quaternion(-0.0859569, -0.174079, 0.581632, 0.789944)
bones/66/rotation = Quaternion(0.258021, 0.0621234, 0.176864, 0.947779)
bones/67/rotation = Quaternion(0.000573633, -0.686777, 0.0600931, 0.72438)
bones/68/rotation = Quaternion(0.531637, 0.651305, -0.00470149, 0.541425)
bones/69/rotation = Quaternion(-0.414817, 0.0630402, -0.163786, 0.89282)
bones/70/rotation = Quaternion(-0.857025, -0.0216346, 0.000121033, 0.514821)
bones/72/rotation = Quaternion(-0.732026, 0.10639, 0.0219977, 0.672558)
bones/72/scale = Vector3(1, 0.99999, 1.00001)
bones/73/rotation = Quaternion(-0.639734, -0.0130836, -0.0548554, 0.766524)
bones/74/rotation = Quaternion(-0.784119, 0.0585631, 0.0189947, 0.617549)
bones/76/rotation = Quaternion(-0.713155, 0.0597328, 0.0683968, 0.695099)
bones/76/scale = Vector3(1, 0.99999, 1.00001)
bones/77/rotation = Quaternion(-0.638487, 0.0234768, 0.0230384, 0.76893)
bones/78/rotation = Quaternion(-0.763843, -0.0394704, -0.0659163, 0.640813)
bones/80/rotation = Quaternion(-0.666086, 0.0404678, 0.038547, 0.743778)
bones/80/scale = Vector3(1, 0.999991, 1.00001)
bones/81/rotation = Quaternion(-0.659338, -0.0231093, 0.00843019, 0.751444)
bones/82/rotation = Quaternion(-0.771057, 0.00748227, 0.0014269, 0.636721)
bones/84/rotation = Quaternion(-0.617784, 0.0539117, 0.0396655, 0.783494)
bones/84/scale = Vector3(1, 0.999991, 1.00001)
bones/85/rotation = Quaternion(-0.661147, -0.0310173, -0.00951851, 0.749554)
bones/86/rotation = Quaternion(-0.794557, 0.0164067, 0.0307706, 0.606187)
bones/87/rotation = Quaternion(-0.21064, 0.944272, 0.22652, -0.112558)
bones/88/rotation = Quaternion(-0.210641, 0.944272, 0.22652, -0.112558)
bones/89/rotation = Quaternion(-0.21064, 0.944272, 0.22652, -0.112558)
bones/90/rotation = Quaternion(-0.21064, 0.944272, 0.22652, -0.112558)
bones/91/rotation = Quaternion(-0.180248, 0.548244, -0.801492, 0.156681)
bones/91/scale = Vector3(1, 0.999995, 1)
bones/92/rotation = Quaternion(-0.235217, 0.96786, -0.0787912, -0.0413659)
bones/92/scale = Vector3(1, 1.00001, 0.999991)
bones/97/rotation = Quaternion(0.00503954, 0.694157, 0.716769, -0.0660572)
bones/98/rotation = Quaternion(0.696056, 1.46714e-06, 1.34712e-06, 0.717988)
bones/100/rotation = Quaternion(1.67152e-07, 0.847411, 0.530937, 5.81365e-07)
bones/101/rotation = Quaternion(3.90973e-07, 0.761815, 0.647795, -3.29962e-07)
bones/106/rotation = Quaternion(-0.817012, 6.97199e-07, 9.66296e-07, 0.57662)
bones/108/position = Vector3(-1.83217e-06, -0.0615101, -0.760665)

[node name="MBlab_bd1732665696_6954129" parent="TrueChappelCharacter/MBlab_sk1732665696_6954129/Skeleton3D" index="1"]
surface_material_override/6 = SubResource("StandardMaterial3D_3ij7k")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../TrueChappelCharacter")
tree_root = SubResource("AnimationNodeStateMachine_cx2tk")
anim_player = NodePath("../TrueChappelCharacter/AnimationPlayer")
parameters/conditions/guardHigh = false
parameters/conditions/guardLow = false
parameters/conditions/hurt = false
parameters/conditions/idle = false
parameters/conditions/isWalking = false
parameters/conditions/leftHigh = false
parameters/conditions/leftLow = false
parameters/conditions/rightHigh = false
parameters/conditions/rightLow = false
parameters/conditions/skinwalker = false

[node name="LeftHandHitbox" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="LeftHand" type="CollisionShape3D" parent="LeftHandHitbox"]
shape = SubResource("CapsuleShape3D_1t3d4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftHandHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.538934, 0.479399, 0)
visible = false
mesh = SubResource("BoxMesh_0j46t")

[node name="BodyVulnHitbox" type="Area3D" parent="."]
collision_mask = 8

[node name="BodyVuln" type="CollisionShape3D" parent="BodyVulnHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00926153, 0.513133, 0.0876564)
shape = SubResource("BoxShape3D_j3yqx")

[node name="HeadVulnHitbox" type="Area3D" parent="."]
collision_mask = 8

[node name="HeadVuln" type="CollisionShape3D" parent="HeadVulnHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00537109, 1.60427, 0.0975063)
shape = SubResource("BoxShape3D_acvlh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HeadVulnHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.182002, 1.98565, -0.360772)
visible = false
mesh = SubResource("BoxMesh_0j46t")

[node name="RightHandHitbox" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="RightHand" type="CollisionShape3D" parent="RightHandHitbox"]
transform = Transform3D(0.240262, 0, 0, 0, 0.240261, 0, 0, 0, 0.240262, 0, 0, 0)
shape = SubResource("CapsuleShape3D_rw2st")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightHandHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.559002, 0.479399, 0)
visible = false
mesh = SubResource("BoxMesh_0j46t")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.625
one_shot = true

[node name="Slap1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_k710g")
bus = &"SFX"

[connection signal="animation_finished" from="TrueChappelCharacter/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="LeftHandHitbox" to="." method="_on_left_hand_hitbox_area_entered"]
[connection signal="area_entered" from="BodyVulnHitbox" to="." method="_on_body_vuln_hitbox_area_entered"]
[connection signal="area_entered" from="HeadVulnHitbox" to="." method="_on_head_vuln_hitbox_area_entered"]
[connection signal="area_entered" from="RightHandHitbox" to="." method="_on_right_hand_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="TrueChappelCharacter"]
